<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
            android:key="@string/settings_auto_update_key"
            android:defaultValue="true"
            android:summary="@string/activity_settings_auto_summary"
            android:title="@string/activity_settings_auto_title">
    </SwitchPreference>

    <EditTextPreference
            android:dependency="@string/settings_auto_update_key"
            android:key="@string/settings_period_key"
            android:defaultValue="1440"
            android:title="@string/activity_settings_period_title"
            android:summary="@string/activity_settings_period_summary"
            android:numeric="integer"
    >
    </EditTextPreference>


    <!--<PreferenceScreen-->
            <!--android:summary="Импортированная системная настройка"-->
            <!--android:title="Настройка через намерение">-->
        <!--<intent android:action="android.settings.AIRPLANE_MODE_SETTINGS"/>-->
    <!--</PreferenceScreen>-->

    <ListPreference
            android:key="lang"
            android:title="@string/LangTitle"
            android:summary="@string/LangSummary"
            android:entries="@array/entries_lang"
            android:entryValues="@array/entryvalues_lang"
            android:dialogTitle="@string/LangDialogTitle" />
</PreferenceScreen>