<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

                <item
                        android:id="@+id/nav_add"
                        android:icon="@drawable/ic_menu_add"
                        android:title="@string/drawer_items_array_add"/>
                <item
                        android:id="@+id/nav_change"
                        android:icon="@drawable/ic_menu_change"
                        android:title="@string/drawer_items_array_change"/>
                <item
                        android:id="@+id/nav_delete"
                        android:icon="@drawable/ic_menu_delete"
                        android:title="@string/drawer_items_array_delete"/>
                <item
                        android:id="@+id/nav_setting"
                        android:icon="@drawable/ic_menu_manage"
                        android:title="@string/drawer_items_array_setting"/>
                <item
                        android:id="@+id/nav_about"
                        android:icon="@drawable/ic_menu_about"
                        android:title="@string/drawer_items_array_about"/>

    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share"/>-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send"/>-->
    <!--</menu>-->
    <!--</item>-->

</menu>
